@@ -1,0 +1,5 @@
+[BIBMANAGER]
+style = autumn
+text_editor = None
+paper = letter
+adstoken = None
